// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it decreases the number of rows when clicking on remove button 1`] = `
.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: hsla(195,86%,64%);
  color: hsla(0,0%,100%);
  border-radius: 100%;
  height: 100%;
  border: none;
  font-size: 1.6rem;
  text-transform: uppercase;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 1rem !important;
  float: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c18:hover {
  opacity: 0.8;
}

.c10 {
  color: hsla(0,0%,40%);
  font-size: 1.4rem;
  font-weight: 500;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c8 {
  width: 100%;
  height: 4.4rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1.2rem;
  opacity: 1;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
}

.c8::-webkit-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c8::-moz-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c8:-ms-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c8::placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c11 {
  width: 100%;
  height: 4.4rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1.2rem;
  opacity: 0.5;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
}

.c11::-webkit-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c11::-moz-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c11:-ms-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c11::placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c6 {
  font-size: 1.4rem;
  line-height: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 4rem;
  height: 4rem;
  margin: 0.6rem 0.5rem;
  fill: hsla(0,0%,80%);
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c4:hover {
  cursor: pointer;
  fill: hsla(0,0%,7%);
}

.c3 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c15 {
  margin-bottom: 3rem;
}

.c17 {
  margin-top: 2rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 0rem;
  margin-right: 0rem;
  margin-bottom: 1rem;
  margin-left: 0rem;
  background-color: transparent;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 0rem;
  margin-right: 0rem;
  margin-bottom: 1rem;
  margin-left: 0rem;
  background-color: transparent;
}

.c9 {
  -webkit-flex: 5;
  -ms-flex: 5;
  flex: 5;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c12 {
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c13 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 1rem 0 0;
  text-align: left;
  max-width: 0.5rem;
}

.c1 {
  margin-bottom: 4rem;
}

@media (max-width:768px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:768px) {
  .c5 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:1170px) {
  .c9 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c9 {
    margin: 0;
  }
}

@media (max-width:1170px) {
  .c12 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c12 {
    margin: 0;
  }
}

@media (max-width:1170px) {
  .c13 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c13 {
    margin: 0;
  }
}

@media (max-width:1170px) {
  .c14 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c14 {
    margin: 0;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h3>
          Responsáveis Pela Tecnologia
        </h3>
        <span
          class="c3"
          name="help_button"
          tabindex="0"
        >
          <svg
            class="c4"
            fill="currentColor"
            height="1em"
            id="technologyResponsibles.owner"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
            />
          </svg>
        </span>
      </div>
      <div
        class="c5"
        data-testid="row"
      >
        <div
          class="c6"
        >
          
          <div
            class="c7"
          >
            <input
              aria-label=""
              class="c8"
              id="technologyResponsibles.owner.user_id"
              name="technologyResponsibles.owner.user_id"
              placeholder=""
              type="hidden"
              value=""
            />
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c6"
          >
            <label
              class="c10"
              for="technologyResponsibles.owner.full_name"
            >
              Nome Completo
               
            </label>
            <div
              class="c7"
            >
              <input
                aria-label="Nome Completo"
                class="c11"
                disabled=""
                id="technologyResponsibles.owner.full_name"
                name="technologyResponsibles.owner.full_name"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="c12"
        >
          <div
            class="c6"
          >
            <label
              class="c10"
              for="technologyResponsibles.owner.email"
            >
              Email
               
            </label>
            <div
              class="c7"
            >
              <input
                aria-label="Email"
                class="c11"
                disabled=""
                id="technologyResponsibles.owner.email"
                name="technologyResponsibles.owner.email"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="c13"
        >
          <div
            class="c6"
          >
            <label
              class="c10"
              for="technologyResponsibles.owner.phone_number"
            >
              Telefone
               
            </label>
            <div
              class="c7"
            >
              <input
                aria-label="Telefone"
                class="c11"
                disabled=""
                id="technologyResponsibles.owner.phone_number"
                name="technologyResponsibles.owner.phone_number"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="c14"
        />
      </div>
      <div
        class="c15"
      >
        <div
          class="c7"
        >
          <div
            class="c16"
          />
        </div>
        <div
          class="c17"
        />
        <button
          class="c18"
          color="hsla(0, 0%, 100%)"
          name="technologyResponsibles.users_add_button"
          title=""
          type="button"
        >
          <svg>
            FaPlus mocked
          </svg>
        </button>
      </div>
    </div>
    ,
  </form>
</div>
`;

exports[`it increases the number of rows when clicking on add button 1`] = `
.c22 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: hsla(195,86%,64%);
  color: hsla(0,0%,100%);
  border-radius: 100%;
  height: 100%;
  border: none;
  font-size: 1.6rem;
  text-transform: uppercase;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 1rem !important;
  float: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c22:hover {
  opacity: 0.8;
}

.c21 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: hsl(0,0%,74%);
  color: hsla(0,0%,100%);
  border-radius: 100%;
  height: 100%;
  border: none;
  font-size: 1.2rem;
  text-transform: uppercase;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.2rem !important;
  float: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c21:hover {
  opacity: 0.8;
}

.c10 {
  color: hsla(0,0%,40%);
  font-size: 1.4rem;
  font-weight: 500;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c8 {
  width: 100%;
  height: 4.4rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1.2rem;
  opacity: 1;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
}

.c8::-webkit-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c8::-moz-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c8:-ms-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c8::placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c11 {
  width: 100%;
  height: 4.4rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1.2rem;
  opacity: 0.5;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
}

.c11::-webkit-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c11::-moz-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c11:-ms-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c11::placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c6 {
  font-size: 1.4rem;
  line-height: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c19 {
  font-size: 1.4rem;
  line-height: 14px;
}

.c19 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 4rem;
  height: 4rem;
  margin: 0.6rem 0.5rem;
  fill: hsla(0,0%,80%);
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c4:hover {
  cursor: pointer;
  fill: hsla(0,0%,7%);
}

.c3 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c18 {
  color: hsla(0,79%,63%);
  margin-left: 0.5rem;
  display: inline-block;
}

.c20 {
  width: 100%;
  height: 4.4rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1.2rem;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
  opacity: 1;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
}

.c20::-webkit-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c20::-moz-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c20:-ms-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c20::placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c15 {
  margin-bottom: 3rem;
}

.c17 {
  margin-top: 2rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 0rem;
  margin-right: 0rem;
  margin-bottom: 1rem;
  margin-left: 0rem;
  background-color: transparent;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 0rem;
  margin-right: 0rem;
  margin-bottom: 1rem;
  margin-left: 0rem;
  background-color: transparent;
}

.c9 {
  -webkit-flex: 5;
  -ms-flex: 5;
  flex: 5;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c12 {
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c13 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 1rem 0 0;
  text-align: left;
  max-width: 0.5rem;
}

.c1 {
  margin-bottom: 4rem;
}

@media (max-width:768px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:768px) {
  .c5 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:1170px) {
  .c9 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c9 {
    margin: 0;
  }
}

@media (max-width:1170px) {
  .c12 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c12 {
    margin: 0;
  }
}

@media (max-width:1170px) {
  .c13 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c13 {
    margin: 0;
  }
}

@media (max-width:1170px) {
  .c14 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c14 {
    margin: 0;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h3>
          Responsáveis Pela Tecnologia
        </h3>
        <span
          class="c3"
          name="help_button"
          tabindex="0"
        >
          <svg
            class="c4"
            fill="currentColor"
            height="1em"
            id="technologyResponsibles.owner"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
            />
          </svg>
        </span>
      </div>
      <div
        class="c5"
        data-testid="row"
      >
        <div
          class="c6"
        >
          
          <div
            class="c7"
          >
            <input
              aria-label=""
              class="c8"
              id="technologyResponsibles.owner.user_id"
              name="technologyResponsibles.owner.user_id"
              placeholder=""
              type="hidden"
              value=""
            />
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c6"
          >
            <label
              class="c10"
              for="technologyResponsibles.owner.full_name"
            >
              Nome Completo
               
            </label>
            <div
              class="c7"
            >
              <input
                aria-label="Nome Completo"
                class="c11"
                disabled=""
                id="technologyResponsibles.owner.full_name"
                name="technologyResponsibles.owner.full_name"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="c12"
        >
          <div
            class="c6"
          >
            <label
              class="c10"
              for="technologyResponsibles.owner.email"
            >
              Email
               
            </label>
            <div
              class="c7"
            >
              <input
                aria-label="Email"
                class="c11"
                disabled=""
                id="technologyResponsibles.owner.email"
                name="technologyResponsibles.owner.email"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="c13"
        >
          <div
            class="c6"
          >
            <label
              class="c10"
              for="technologyResponsibles.owner.phone_number"
            >
              Telefone
               
            </label>
            <div
              class="c7"
            >
              <input
                aria-label="Telefone"
                class="c11"
                disabled=""
                id="technologyResponsibles.owner.phone_number"
                name="technologyResponsibles.owner.phone_number"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="c14"
        />
      </div>
      <div
        class="c15"
      >
        <div
          class="c7"
        >
          <div
            class="c16"
          />
        </div>
        <div
          class="c17"
        >
          <div
            class="c2"
            data-testid="row"
          >
            <div
              class="c9"
            >
              <div
                class="c6"
              >
                <label
                  class="c10"
                  for="technologyResponsibles.users[0].full_name"
                >
                  Nome Completo
                   
                  <span
                    aria-label="Indicador visual de campo obrigatório"
                    class="c18"
                  >
                    *
                  </span>
                </label>
                <div
                  class="c7"
                >
                  <input
                    aria-label="Nome Completo"
                    aria-required="true"
                    class="c8"
                    id="technologyResponsibles.users[0].full_name"
                    name="technologyResponsibles.users[0].full_name"
                    placeholder="Nome do responsável"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              class="c12"
            >
              <div
                class="c6"
              >
                <label
                  class="c10"
                  for="technologyResponsibles.users[0].email"
                >
                  Email
                   
                  <span
                    aria-label="Indicador visual de campo obrigatório"
                    class="c18"
                  >
                    *
                  </span>
                </label>
                <div
                  class="c7"
                >
                  <input
                    aria-label="Email"
                    aria-required="true"
                    class="c8"
                    id="technologyResponsibles.users[0].email"
                    name="technologyResponsibles.users[0].email"
                    placeholder="Ex.: email@dominio.com.br"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              class="c13"
            >
              <div
                class="c19"
              >
                <label
                  class="c10"
                  for="technologyResponsibles.users[0].phone_number"
                >
                  Telefone
                   
                  <span
                    aria-label="Indicador visual de campo obrigatório"
                    class="c18"
                  >
                    *
                  </span>
                </label>
                <div
                  class="c7"
                >
                  <input
                    aria-label="Telefone"
                    aria-required="true"
                    class="c20"
                    id="technologyResponsibles.users[0].phone_number"
                    name="technologyResponsibles.users[0].phone_number"
                    placeholder="(xx) xxxxxxxxx"
                    type="text"
                    value=""
                    variant="default"
                  />
                </div>
              </div>
            </div>
            <div
              class="c14"
            >
              <button
                class="c21"
                color="hsla(0, 0%, 100%)"
                name=""
                title=""
                type="button"
              >
                <svg>
                  FaMinus mocked
                </svg>
              </button>
            </div>
          </div>
        </div>
        <button
          class="c22"
          color="hsla(0, 0%, 100%)"
          name="technologyResponsibles.users_add_button"
          title=""
          type="button"
        >
          <svg>
            FaPlus mocked
          </svg>
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`it renders the form with 2 rows 1`] = `
.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: hsla(195,86%,64%);
  color: hsla(0,0%,100%);
  border-radius: 100%;
  height: 100%;
  border: none;
  font-size: 1.6rem;
  text-transform: uppercase;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 1rem !important;
  float: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c18:hover {
  opacity: 0.8;
}

.c10 {
  color: hsla(0,0%,40%);
  font-size: 1.4rem;
  font-weight: 500;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c8 {
  width: 100%;
  height: 4.4rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1.2rem;
  opacity: 1;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
}

.c8::-webkit-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c8::-moz-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c8:-ms-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c8::placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c11 {
  width: 100%;
  height: 4.4rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1.2rem;
  opacity: 0.5;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
}

.c11::-webkit-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c11::-moz-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c11:-ms-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c11::placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c6 {
  font-size: 1.4rem;
  line-height: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 4rem;
  height: 4rem;
  margin: 0.6rem 0.5rem;
  fill: hsla(0,0%,80%);
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c4:hover {
  cursor: pointer;
  fill: hsla(0,0%,7%);
}

.c3 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c15 {
  margin-bottom: 3rem;
}

.c17 {
  margin-top: 2rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 0rem;
  margin-right: 0rem;
  margin-bottom: 1rem;
  margin-left: 0rem;
  background-color: transparent;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 0rem;
  margin-right: 0rem;
  margin-bottom: 1rem;
  margin-left: 0rem;
  background-color: transparent;
}

.c9 {
  -webkit-flex: 5;
  -ms-flex: 5;
  flex: 5;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c12 {
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c13 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 1rem 0 0;
  text-align: left;
  max-width: 0.5rem;
}

.c1 {
  margin-bottom: 4rem;
}

@media (max-width:768px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:768px) {
  .c5 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:1170px) {
  .c9 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c9 {
    margin: 0;
  }
}

@media (max-width:1170px) {
  .c12 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c12 {
    margin: 0;
  }
}

@media (max-width:1170px) {
  .c13 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c13 {
    margin: 0;
  }
}

@media (max-width:1170px) {
  .c14 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c14 {
    margin: 0;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h3>
          Responsáveis Pela Tecnologia
        </h3>
        <span
          class="c3"
          name="help_button"
          tabindex="0"
        >
          <svg
            class="c4"
            fill="currentColor"
            height="1em"
            id="technologyResponsibles.owner"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
            />
          </svg>
        </span>
      </div>
      <div
        class="c5"
        data-testid="row"
      >
        <div
          class="c6"
        >
          
          <div
            class="c7"
          >
            <input
              aria-label=""
              class="c8"
              id="technologyResponsibles.owner.user_id"
              name="technologyResponsibles.owner.user_id"
              placeholder=""
              type="hidden"
              value=""
            />
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            class="c6"
          >
            <label
              class="c10"
              for="technologyResponsibles.owner.full_name"
            >
              Nome Completo
               
            </label>
            <div
              class="c7"
            >
              <input
                aria-label="Nome Completo"
                class="c11"
                disabled=""
                id="technologyResponsibles.owner.full_name"
                name="technologyResponsibles.owner.full_name"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="c12"
        >
          <div
            class="c6"
          >
            <label
              class="c10"
              for="technologyResponsibles.owner.email"
            >
              Email
               
            </label>
            <div
              class="c7"
            >
              <input
                aria-label="Email"
                class="c11"
                disabled=""
                id="technologyResponsibles.owner.email"
                name="technologyResponsibles.owner.email"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="c13"
        >
          <div
            class="c6"
          >
            <label
              class="c10"
              for="technologyResponsibles.owner.phone_number"
            >
              Telefone
               
            </label>
            <div
              class="c7"
            >
              <input
                aria-label="Telefone"
                class="c11"
                disabled=""
                id="technologyResponsibles.owner.phone_number"
                name="technologyResponsibles.owner.phone_number"
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="c14"
        />
      </div>
      <div
        class="c15"
      >
        <div
          class="c7"
        >
          <div
            class="c16"
          />
        </div>
        <div
          class="c17"
        />
        <button
          class="c18"
          color="hsla(0, 0%, 100%)"
          name="technologyResponsibles.users_add_button"
          title=""
          type="button"
        >
          <svg>
            FaPlus mocked
          </svg>
        </button>
      </div>
    </div>
  </form>
</div>
`;
